# bornet

./: .gitignore  .gitmodules  CLAUDE.md  README.md  cabal.project
bornet/: CHANGELOG.md  README.md  __danger_init_data.sh  bornet.cabal  build.sh  conf.yaml  run.sh
bornet/app/: Main.hs
bornet/lib/Bornet/: Api.hs  Model.hs  Prelude.hs  Repository.hs  Root.hs  Sqlite.hs
bornet/lib/Bornet/Api/: Server.hs  WholeServer.hs
bornet/lib/Bornet/Api/Server/: Htmx.hs
bornet/lib/Bornet/Repository/: Sqlite.hs
bornet/sql/: data-anon.sql  generate_horario_inserts-anon.py  schema.sql  useful_queries.sql
bornet/sql/example_queries/: geros_for_day.sql
bornet/static/: drag-n-drop.js  styles.css
bornet/test/: tests.hs
